2002-12-26  Dimitri Papadopoulos  <dimitri_at@sourceforge.users.net>

	* include/wingdi.h (BALTIC_CHARSET, JOHAB_CHARSET,
	VIETNAMESE_CHARSET): Remove duplicate defines. 
	* lib/comctl32.def (ImageList_SetImageCount): Add stub.

2002-12-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/dbt.h (DEV_BROADCAST_PORT): Add UNICODE version.
	Thanks to: Dimitri Papadopoulos  <dimitri_at@sourceforge.users.net>

2002-12-26  Danny Smith  <dannysmith@users.sourceforge.net>

 	* include/unknwn.h: Include windows.h and ole2.h before header
	guard to avoid circular inclusion of COM headers.

2002-12-26  Dimitri Papadopoulos  <dimitri_at@sourceforge.users.net>

	* include/dde.h (PackDDElParam, UnpackDDElParam,FreeDDElParam,
	ReuseDDElParam): Use __WIN64 compatible typedefs.

2002-12-26  Dimitri Papadopoulos  <dimitri_at@sourceforge.users.net>

	* include/accctrl.h (ACTRL_ACCESS_ENTRY[AW]): Make
	lpInheritProperty member const.
	(ACTRL_PROPERTY_ENTRY[AW]): Make lpProperty member
	const.

2002-12-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commcat.h: Don't include windows.h or ole2.h ifdef
	COM_NO_WINDOWS_H.
	* include/unknwn.h: Ditto.
	
2002-12-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/imm.h (ImmGetCompositionFont[AW],
	ImmSetCompositionFont[AW]): Add NOGDI guard.

2002-12-19  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/hidusage.h: Remove unneccessary #pragma pack's.
	* include/ddk/miniport.h (EMULATOR_PORT_ACCESS_TYPE): Define
	before using.
	(VIDEO_ACCESS_RANGE): Guard against prior definition.
	* include/ddk/minitape.h (INQUIRYDATA): Guard against prior
	definition.
	* include/ddk/ndis.h (DECLARE_UNKNOWN_PROTOTYPE): Correct macro.
	* include/ddk/ndisguid.h: Remove unneccessary #pragma pack's.
	* include/ddk/scsi.h (INQUIRYDATA): Guard against prior
	definition.
	* include/ddk/scsiwmi.h (GUID): Define if not already done.
	(LPCGUID): Likewise.
	* include/ddk/tdi.h: Close "Listen flags" comment.